# ht-api-juce

./: CMakeLists.txt
demo/: demo.jucer
supperware/: Tracker.h
supperware/configpanel/: configPanel-BasePanel.h
supperware/headpanel/: headpanel-Plotter.h
supperware/midi/: midi-MidiDuplex.h  midi-TrackerDriver.h
